Alarm mp3 added

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <i class="fa fa-bell"></i>
           </a>
           <div class="dropdown-menu media-list dropdown-menu-right notifications" style="height: 500px; overflow-y: auto; overflow-x: hidden;">
-            
+
           </div>
         </li>
         <li class="dropdown navbar-user">
@@ -58,7 +58,8 @@
     </div>
 
     <div id="sidebar" class="sidebar">
-      <div data-scrollbar="true" data-height="100%">
+      <!-- <div data-scrollbar="true" data-height="100%"> -->
+      <div class="sidebar-scroll">
         <ul class="nav">
           <li class="nav-profile">
             <a href="javascript:;" data-toggle="nav-profile">
