--- a/index.html
+++ b/index.html
@@ -265,6 +265,26 @@
     </div>
   </div>
 
+  <div class="modal fade show" id="disposal-history-modal" aria-modal="true" style="display: none;">
+    <div class="modal-dialog modal-lg">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h4 class="modal-title">Disposal History</h4>
+          <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+        </div>
+        <div class="modal-body">
+          <div class="disposal_history">
+
+          </div>
+        </div>
+        <div class="modal-footer">
+          <a href="javascript:;" class="btn btn-white" data-dismiss="modal">Cancel</a>
+          <a href="javascript:;" class="btn btn-danger clear_history" data-dismiss="modal">Clear history</a>
+        </div>
+      </div>
+    </div>
+  </div>
+
   <script type="text/javascript" src="assets/js/app.min.js"></script>
   <script type="text/javascript" src="assets/plugins/moment/moment.min.js"></script>
   <script type="text/javascript" src="assets/plugins/gritter/js/jquery.gritter.min.js"></script>
