Prevent cook when there is ready item

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
           <div class="widget widget-rounded m-b-0" data-id="widget">
             <div class="widget-header d-flex justify-content-between align-items-center">
               <h4 class="widget-header-title width-200">Item Overview</h4>
-              <div class="timestamp p-r-10 text-red f-w-600"></div>
+              <div class="timestamp m-l-auto p-r-10 text-red f-w-600"></div>
             </div>
             <div class="vertical-box with-grid with-border-top item-details">
 
