Batch number, ready item issue fix

--- a/login.html
+++ b/login.html
@@ -29,7 +29,7 @@
 				<div class="news-caption">
 					<h4 class="caption-title"><b>Kitchen</b> Admin App</h4>
 					<p>
-						You can login with dashboard account. Cook and dispose items and see reports and analyzed data from dashboard. 
+						You can login with dashboard account. Cook and dispose items and see reports and analyzed data from dashboard.
 					</p>
 				</div>
 			</div>
@@ -84,3 +84,29 @@
 
 </body>
 </html>
+<!--
+Where the north wind meets the sea
+There's a river full of memory
+Sleep, my darling, safe and sound
+For in this river all is found
+All is found
+When all is lost, all is found
+In her waters, deep and true
+Lay the answers and a path for you
+Dive down deep into her sound
+But not too far or you'll be drowned
+Yes, she will sing to those who'll hear
+And in her song, all magic flows
+But can you brave what you most fear?
+Can you face what the river knows?
+Until the rivers' finally crossed
+You'll never feel the solid ground
+You have to get a little lost
+On your way to being found
+Where the north wind meets the sea
+There's a mother full of memory
+Come, my darling, homeward bound
+Where all is lost, then all is found
+All is found
+All is found
+ -->
