Notification fix, dispose history fix

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           <a href="javascript:;" data-toggle="dropdown" class="notification-count dropdown-toggle f-s-14" aria-expanded="false">
             <i class="fa fa-bell"></i>
           </a>
-          <div class="dropdown-menu media-list dropdown-menu-right notifications" style="height: 500px; overflow-y: auto; overflow-x: hidden;">
+          <div class="dropdown-menu media-list dropdown-menu-right notifications" style="max-height: 500px; min-height: 100px; overflow-y: auto; overflow-x: hidden;">
 
           </div>
         </li>
