Remaining amount displaying page added

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet" />
 
   <link href="assets/plugins/gritter/css/jquery.gritter.css" rel="stylesheet" />
+  <link href="assets/plugins/select2/dist/css/select2.min.css" rel="stylesheet" />
   <link href="assets/css/app.min.css" rel="stylesheet" />
   <link href="assets/custom/css/kitchen.css" rel="stylesheet" />
 </head>
@@ -81,10 +82,18 @@
           </li>
         </ul>
         <ul class="nav" style="height: 50px;">
-          <li class="nav-sub remaining-amount">
+          <li class="nav-sub overview">
             <a href="javascript:;" class="d-flex align-items-center justify-content-start">
               <i class="fa fa-chart-pie widget-img widget-img-sm rounded d-flex align-items-center"></i>
               <p class="w-50 m-0 m-l-10">Overview</p>
+            </a>
+          </li>
+        </ul>
+        <ul class="nav" style="height: 50px;">
+          <li class="nav-sub remaining">
+            <a href="javascript:;" class="d-flex align-items-center justify-content-start">
+              <i class="fa fa-cart-arrow-down widget-img widget-img-sm rounded d-flex align-items-center"></i>
+              <p class="w-50 m-0 m-l-10">Remaining</p>
             </a>
           </li>
         </ul>
@@ -296,6 +305,7 @@
 	<script src="assets/plugins/datatables.net-responsive/js/dataTables.responsive.min.js"></script>
 	<script src="assets/plugins/datatables.net-responsive-bs4/js/responsive.bootstrap4.min.js"></script>
   <script src="assets/plugins/apexcharts/dist/apexcharts.min.js"></script>
+  <script src="assets/plugins/select2/dist/js/select2.min.js"></script>
 
   <script type="text/javascript" src="assets/custom/data/data.js"></script>
   <script type="text/javascript" src="assets/custom/js/api.js"></script>
